# wyoming-whisper-openai

./: Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml  repository.yaml  run.sh
.github/workflows/: build.yaml  builder.yaml
addon/: DOCS.md  Dockerfile  build.yaml  config.yaml
addon/rootfs/etc/s6-overlay/s6-rc.d/whisper/: run
addon/rootfs/etc/services.d/whisper/: run
addon/translations/: en.yaml
tests/: test_client.py
wyoming_whisper_openai/: __main__.py  handler.py
wyoming_whisper_openai_client/: __init__.py  __main__.py  handler.py
