[tool.poetry]
name = "wyoming-whisper-openai"
version = "1.0.0"
description = "Wyoming protocol server for OpenAI Whisper API"
authors = ["Stefan Kirsch <432621+m0rdras@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/m0rdras/wyoming-whisper-openai"
keywords = ["wyoming", "whisper", "openai", "stt", "speech-to-text"]
packages = [{include = "wyoming_whisper_openai"}]

[tool.poetry.dependencies]
python = "^3.9"
wyoming = "^1.6.0"
httpx = "^0.27.2"
openai = "^1.54.4"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wyoming-whisper-openai = "wyoming_whisper_openai.__main__:run"
